Set @media for proper title resize on smaller screens. Added style for the bottom buttons and fixed styling bugs on the garment preview

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,102 +1,124 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700');
 
 body, html {
-  margin: 0;
-  padding: 0;
-  font-family: 'Montserrat', sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: 'Montserrat', sans-serif;
 }
 
 /*-----------------------------Custom Botstrap styling-----------------------------*/
 
 .title {
-  font-weight: 300;
+	font-weight: 300;
+}
+
+@media screen and (max-width: 992px) {
+  .title {
+    font-size: 27px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .title {
+    font-size: 29px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .title {
+    font-size: 26px;
+  }
 }
 
 .navbar-custom {
-  border-bottom: solid 1px rgb(228, 228, 228);
+	border-bottom: solid 1px rgb(228, 228, 228);
 }
 
 a.custom-icons:link, a.custom-icons:visited {
-  text-decoration: none;
-  cursor: pointer;
-  color: #000;
+	text-decoration: none;
+	cursor: pointer;
+	color: #000;
 }
 
 a.custom-icons:hover {
-  text-decoration: none;
-  cursor: pointer;
-  color: green;
+	text-decoration: none;
+	cursor: pointer;
+	color: green;
 }
 
 a.custom-icons:active {
-  color: red;
+	color: red;
 }
 
 option:hover {
-  cursor: pointer;
+	cursor: pointer;
+}
+
+.btn-custom {
+	width: 100%;
+	text-align: center;
+}
+
+.btn-custom-align {
+	text-align: center;
 }
 
 /*----------------------Custom Botstrap radio buttons styling----------------------*/
 
 input.custom-radio-btn {
-  visibility:hidden;
+	visibility: hidden;
 }
 
 label.custom-radio-btn {
-  width: 100%;
-  height: 38px;
-  cursor: pointer;
-  text-align: center;
-  padding: 7px;
-  color: #6c757d;
-  border: 1px solid #ced4da;
-  border-radius: 5px;
+	width: 100%;
+	height: 38px;
+	cursor: pointer;
+	text-align: center;
+	padding: 7px;
+	color: #6c757d;
+	border: 1px solid #ced4da;
+	border-radius: 5px;
 }
 
 input.custom-radio-btn:checked + label.custom-radio-btn {
-  background: rgb(40, 167, 69);
-  color: #fff;
+	background: rgb(40, 167, 69);
+	color: #fff;
 }
 
-/*----------------------------Garment example canvas box---------------------------*/
+/*--------------------------------Garment canvas box-------------------------------*/
+
+#garment-div {
+  width: 352px;
+  height: 426px;
+	position: relative;
+	background-color: #fff;
+}
+
+#garments {
+  width: 352px;
+  height: 426px;
+}
 
 .drawing-area {
-  position: absolute;
-  top: 60px;
-  left: 122px;
-  z-index: 10;
-  width: 200px;
-  height: 400px;
+	position: absolute;
+	top: 60px;
+	left: 97px;
+	z-index: 10;
 }
 
 .canvas-container {
-  width: 200px;
-  height: 400px;
-  position: relative;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
+	position: relative;
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 }
 
 #canvas {
-  position: absolute;
-  width: 200px;
-  height: 400px;
-  left: 0px;
-  top: 0px;
-  cursor: default;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-}
-
-/*----------------------------------Garment colour---------------------------------*/
-
-#garment-div {
-  width: 452px;
-  height: 548px;
-  position: relative;
-  background-color: #fff;
+	position: absolute;
+	cursor: default;
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 }
